--- a/red-rose-flower-main/vercel.json
+++ b/red-rose-flower-main/vercel.json
@@ -1,7 +1,14 @@
 {
-    "rewrites": [
+    "version": 2,
+    "builds": [
         {
-            "source": "/(.*)",
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
             "destination": "/"
         }
     ]
